--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magma Launcher</title>
+    <title>Magma Launcher 2.0</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="fe33c6c5f28e38177c57c76a9c511413.ico" type="image/x-icon">
 </head>
 <body>
     <div class="launcher">
         <header>
-            <h1>Magma Launcher</h1>
+            <h1>Magma Launcher 2.0</h1>
         </header>
         <nav class="menu">
             <ul>
@@ -21,19 +21,21 @@
                         <a href="Eaglercraft_1.5.2_file.html">Eaglercraft 1.5.2</a>
                         <a href="Eaglercraft_1.3_file.html">Eaglercraft 1.3</a>                         
                         <a href="FlameClient3.8.html">FlameClient</a> 
-
+                        <!-- New additions -->
+                        <a href="LavaMod.html">LavaMod</a>
+                        <a href="InfernoCraft.html">InfernoCraft</a>
                     </div>
                 </li>
             </ul>
         </nav>
         <main>
             <div class="content">
-                <p>The Next-Gen Eaglercraft Launcher!</p>
+                <p>The Next-Gen Eaglercraft Launcher is now even hotter with Magma Launcher 2.0!</p>
             </div>
         </main>
         <footer>
             <div class="version">
-                v1.0
+                v2.0
             </div>
             <a href="https://youtube.com/@flqmze" target="_blank">Made By Flame</a>
             <button class="settings-btn">Settings</button>
@@ -46,6 +48,9 @@
             <li><strong>Version 1.0</strong> - Initial release</li>
             <li><strong>Version 1.1</strong> - Added new features</li>
             <li><strong>Version 1.2</strong> - Bug fixes and improvements</li>
+            <!-- New changes -->
+            <li><strong>Version 2.0</strong> - Magma madness unleashed!</li>
+            <li><strong>Version 2.1</strong> - Enhanced user experience</li>
         </ul>
     </div>
 
