--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
                         <a href="Eaglercraft_1.5.2_file.html">Eaglercraft 1.5.2</a>
                         <a href="Eaglercraft_1.3_file.html">Eaglercraft 1.3</a>                         
                         <a href="FlameClient3.8.html">FlameClient</a> 
-                        <!-- New additions -->
-                        <a href="LavaMod.html">LavaMod</a>
-                        <a href="InfernoCraft.html">InfernoCraft</a>
+                        <a href="LavaMod.html">Coming Soon</a>
+                        <a href="InfernoCraft.html">Coming Soon</a>
+                         <a href="Inferndaft.html">Coming Soon</a>
+ <a href="InfernoCraft.html">Coming Soon</a>
+ <a href="InfernoCraft.html">Coming Soon</a>
                     </div>
                 </li>
             </ul>
