--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magma Launcher 2.0</title>
+    <title>Magma Launcher 2.2</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="fe33c6c5f28e38177c57c76a9c511413.ico" type="image/x-icon">
 </head>
 <body>
     <div class="launcher">
         <header>
-            <h1>Magma Launcher 2.0</h1>
+            <h1>Magma Launcher 2.2</h1>
         </header>
         <nav class="menu">
             <ul>
@@ -53,6 +53,7 @@
             <!-- New changes -->
             <li><strong>Version 2.0</strong> - Magma madness unleashed!</li>
             <li><strong>Version 2.1</strong> - Enhanced user experience</li>
+            <li><strong>Version 2.2</strong> - Minor Changes</li>
         </ul>
     </div>
 
