Add music to website. Update to version 2.2

--- a/index.html
+++ b/index.html
@@ -90,5 +90,8 @@
             accountContent.style.display = 'none';
         }
     </script>
+            <audio autoplay loop>
+  <source src="redbone_but_it_s_lofi_hip_hop_mp3_17598.mp3" type="audio/mp3">
+ </audio>  
 </body>
 </html>
