--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magma Launcher 2.2</title>
+    <title>Magma Launcher 2.3</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="fe33c6c5f28e38177c57c76a9c511413.ico" type="image/x-icon">
 </head>
 <body>
     <div class="launcher">
         <header>
-            <h1>Magma Launcher 2.2</h1>
+            <h1>Magma Launcher 2.3</h1>
+                        <audio autoplay loop>
+  <source src="redbone_but_it_s_lofi_hip_hop_mp3_17598.mp3" type="audio/mp3">
+ </audio>  
         </header>
         <nav class="menu">
             <ul>
@@ -32,7 +35,7 @@
         </nav>
         <main>
             <div class="content">
-                <p>The Next-Gen Eaglercraft Launcher is now even hotter with Magma Launcher 2.0!</p>
+                <p>The Next-Gen Eaglercraft Launcher is now even hotter with Magma Launcher 2.3!</p>
             </div>
         </main>
         <footer>
@@ -54,6 +57,7 @@
             <li><strong>Version 2.0</strong> - Magma madness unleashed!</li>
             <li><strong>Version 2.1</strong> - Enhanced user experience</li>
             <li><strong>Version 2.2</strong> - Minor Changes</li>
+             <li><strong>Version 2.3</strong> -Bug fixes, etc.</li>
         </ul>
     </div>
 
@@ -90,8 +94,6 @@
             accountContent.style.display = 'none';
         }
     </script>
-            <audio autoplay loop>
-  <source src="redbone_but_it_s_lofi_hip_hop_mp3_17598.mp3" type="audio/mp3">
- </audio>  
+
 </body>
 </html>
