--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
         <header>
             <h1>Magma Launcher 2.3</h1>
                         
-            <audio autoplay loop>
+<audio autoplay loop>
   <source src="redbone_but_it_s_lofi_hip_hop_mp3_17598.mp3" type="audio/mp3">
- </audio>  
+  Your browser does not support the audio element.
+</audio>
+
             
         </header>
         <nav class="menu">
