--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
     <div class="launcher">
         <header>
             <h1>Magma Launcher 2.3</h1>
-                        
-<audio autoplay loop>
-  <source src="redbone_but_it_s_lofi_hip_hop_mp3_17598.mp3" type="audio/mp3">
-  Your browser does not support the audio element.
-</audio>
 
             
         </header>
@@ -44,9 +39,10 @@
         </main>
         <footer>
             <div class="version">
-                v2.0
+                v2.3
             </div>
             <a href="https://youtube.com/@flqmze" target="_blank">Made By Flame</a>
+            <a href="https://youtube.com/@AR-DEV-1" target="_blank">Made By AR-DEV-1</a>
             <button class="settings-btn">Settings</button>
         </footer>
     </div>
