--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="dropdown-content">
                         <a href="Eaglercraft_1.8.8_file.html">Eaglercraft 1.8.8</a>
                         <a href="Eaglercraft_1.5.2_file.html">Eaglercraft 1.5.2</a>
-                        <a href="Eaglercraft_1.3_file.html">Eaglercraft 1.3</a>                         
+                        <a href="Eaglercraft_1.3_file.html">Eaglercraft b1.3</a>                         
                         <a href="FlameClient3.8.html">FlameClient</a> 
                         <a href="LavaMod.html">Coming Soon</a>
                         <a href="InfernoCraft.html">Coming Soon</a>
