Start working on settings menu

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         </footer>
     </div>
 
+    <div class="settings-btn">
+        //settings
+    </div>
     <div class="changelog">
         <h2>Changelog</h2>
         <ul>
