--- a/latest-eaglercraft-version.html
+++ b/latest-eaglercraft-version.html
@@ -14,7 +14,7 @@
 
   gtag('config', 'G-64TQKQ7TWQ');
 </script>
-<script type="text/javascript" src="loader.js?t=8"></script>
+<script type="text/javascript" src="loader.js?t=8.js"></script>
 <script type="text/javascript">
 window.__eaglercraftLoaderClient = {
 	container: "game_frame",
