--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li class="dropdown">
                     <button class="dropbtn">Menu</button>
                     <div class="dropdown-content">
+                        <a href="latest-eaglercraft-version.html">Eaglercraft Latest Version</a>
                         <a href="Eaglercraft_1.8.8_file.html">Eaglercraft 1.8.8</a>
                         <a href="Eaglercraft_1.5.2_file.html">Eaglercraft 1.5.2</a>
                         <a href="Eaglercraft_1.3_file.html">Eaglercraft b1.3</a>                         
