--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
         </footer>
     </div>
 
-    <div class="settings-btn">
-      
-    </div>
+ 
     <div class="changelog">
         <h2>Changelog</h2>
         <ul>
@@ -62,6 +60,7 @@
             <li><strong>Version 2.1</strong> - Enhanced user experience</li>
             <li><strong>Version 2.2</strong> - Minor Changes</li>
              <li><strong>Version 2.3</strong> -Bug fixes, etc.</li>
+              <li><strong>Version 2.4</strong> -Bug fixes, Add new versions, etc.</li>
         </ul>
     </div>
 
