--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magma Launcher 2.3</title>
+    <title>Magma Launcher 2.5</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="fe33c6c5f28e38177c57c76a9c511413.ico" type="image/x-icon">
 </head>
 <body>
     <div class="launcher">
         <header>
-            <h1>Magma Launcher 2.3</h1>
+            <h1>Magma Launcher 2.5</h1>
 
             
         </header>
@@ -26,21 +26,18 @@
                         <a href="FlameClient3.8.html">FlameClient</a> 
                         <a href="LavaMod.html">Coming Soon</a>
                         <a href="InfernoCraft.html">Coming Soon</a>
-                         <a href="Inferndaft.html">Coming Soon</a>
- <a href="InfernoCraft.html">Coming Soon</a>
- <a href="InfernoCraft.html">Coming Soon</a>
                     </div>
                 </li>
             </ul>
         </nav>
         <main>
             <div class="content">
-                <p>The Next-Gen Eaglercraft Launcher is now even hotter with Magma Launcher 2.3!</p>
+                <p>The Next-Gen Eaglercraft Launcher is now even hotter with Magma Launcher 2.5!</p>
             </div>
         </main>
         <footer>
             <div class="version">
-                v2.3
+                v2.5
             </div>
             <a href="https://youtube.com/@flqmze" target="_blank">Made By Flame</a>
             <a href="https://youtube.com/@AR-DEV-1" target="_blank">Made By AR-DEV-1</a>
@@ -59,8 +56,9 @@
             <li><strong>Version 2.0</strong> - Magma madness unleashed!</li>
             <li><strong>Version 2.1</strong> - Enhanced user experience</li>
             <li><strong>Version 2.2</strong> - Minor Changes</li>
-             <li><strong>Version 2.3</strong> -Bug fixes, etc.</li>
-              <li><strong>Version 2.4</strong> -Bug fixes, Add new versions, etc.</li>
+            <li><strong>Version 2.3</strong> -Bug fixes, etc.</li>
+            <li><strong>Version 2.4</strong> -Bug fixes, Add new versions, etc.</li>
+            <li>Version 2.5</strong> - Bug fixes, New Versions added, Feedback center added.</li>
         </ul>
     </div>
 
