--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li class="dropdown">
                     <button class="dropbtn">Menu</button>
                     <div class="dropdown-content">
+                        <a href="feedback-center.html">Tell us what you think!</a>
                         <a href="latest-eaglercraft-version.html">Eaglercraft Latest Version</a>
                         <a href="Eaglercraft_1.8.8_file.html">Eaglercraft 1.8.8</a>
                         <a href="Eaglercraft_1.5.2_file.html">Eaglercraft 1.5.2</a>
@@ -49,16 +50,14 @@
     <div class="changelog">
         <h2>Changelog</h2>
         <ul>
-            <li><strong>Version 1.0</strong> - Initial release</li>
-            <li><strong>Version 1.1</strong> - Added new features</li>
-            <li><strong>Version 1.2</strong> - Bug fixes and improvements</li>
             <!-- New changes -->
             <li><strong>Version 2.0</strong> - Magma madness unleashed!</li>
             <li><strong>Version 2.1</strong> - Enhanced user experience</li>
             <li><strong>Version 2.2</strong> - Minor Changes</li>
             <li><strong>Version 2.3</strong> -Bug fixes, etc.</li>
             <li><strong>Version 2.4</strong> -Bug fixes, Add new versions, etc.</li>
-            <li>Version 2.5</strong> - Bug fixes, New Versions added, Feedback center added.</li>
+            <li>Version 2.5</strong> - Bug fixes, New Versions added,
+            Feedback center added.</li>
         </ul>
     </div>
 
